# MaintKG

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: gold_release_v0.json
input/: case_study_pdl.csv
notebooks/: example_queries.ipynb
ontology/: main.py  maintie_scheme.json  maintkb_gold.owl  ontology_query.ipynb  utils.py
src/maintkg/: builder.py  main.py  models.py  settings.py
src/maintkg/utils/: builder_utils.py  extraction_utils.py  fusion_utils.py  gazetteer.json  general_utils.py  node_normalisation.py  path_utils.py  refinement_utils.py  resources.py
src/noisie/: _base.py  config.py  download.py  download_checkpoint.py  model_data.py  train.py  utils.py
src/noisie/data/: README.md
